<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Test AndriodApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num0">0</string>
    <string name="addition">+</string>
    <string name="substraction">-</string>
    <string name="division">/</string>
    <string name="multiply">x</string>
    <string name="equals">=</string>
    <string name="clear">C</string>
    <string name="plusminus">+/-</string>
     <string name="dot">.</string>
     <string name="calculator">Simple Calculator</string>
    <string name="action_settings">Settings</string>

</resources>
